# agent-centric-boilerplate

./: Cargo.toml  README.md  bun.lockb  flake.nix  package.json
.github/workflows/: test.yaml
dnas/backend/workdir/: dna.yaml
dnas/backend/zomes/coordinator/main/: Cargo.toml
dnas/backend/zomes/coordinator/main/src/: datum.rs  lib.rs
dnas/backend/zomes/integrity/main/: Cargo.toml
dnas/backend/zomes/integrity/main/src/: datum.rs  lib.rs
tests/src/backend/main/: common.ts  datum.test.ts
ui/: package.json
ui/src/backend/main/: CreateDatum.tsx  DatumDetail.tsx  EditDatum.tsx  types.ts
workdir/: happ.yaml  web-happ.yaml
