[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.4"
hdk = "=0.3.4"
serde = "1.0"

[workspace.dependencies.main]
path = "dnas/backend/zomes/coordinator/main"

[workspace.dependencies.main_integrity]
path = "dnas/backend/zomes/integrity/main"
